[gd_scene load_steps=5 format=3 uid="uid://cok23fi8vgvcq"]

[ext_resource type="Script" uid="uid://d16vbw6ij42ri" path="res://Componentes/Inimigos_Area2/Turret/turret.gd" id="1_1qi3n"]
[ext_resource type="SpriteFrames" uid="uid://but6l1ypbt74x" path="res://SpriteSheets/Animacoes_Etc/pillbox_spriteframes.tres" id="1_oi1o7"]
[ext_resource type="PackedScene" uid="uid://d1h6fhfqct07b" path="res://Componentes/Inimigos_Area2/Turret/tiro_turret.tscn" id="2_5o8cl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qi3n"]
size = Vector2(26.3598, 44.1607)

[node name="Turret" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_1qi3n")
bullet_inimigo = ExtResource("2_5o8cl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_oi1o7")
animation = &"1atira_cima"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.02777, -1.30355)
rotation = 0.575959
shape = SubResource("RectangleShape2D_1qi3n")

[node name="WeaponPosition" type="Node2D" parent="."]
position = Vector2(12, 3)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
